--- a/index.html
+++ b/index.html
@@ -5,119 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Maguette Diop</title>
     <style>
-        /* Style général pour la page */
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            line-height: 1.6;
         }
-
-        /* Style pour le header */
         header {
             background: #333;
             color: #fff;
-            padding: 20px 0;
+            padding: 1rem 0;
             text-align: center;
         }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        header nav ul {
-            list-style: none;
-            padding: 0;
+        nav {
             display: flex;
             justify-content: center;
-            margin-top: 10px;
+            background: #444;
+            padding: 0.5rem;
         }
-
-        header nav ul li {
-            margin: 0 15px;
-        }
-
-        header nav ul li a {
+        nav a {
             color: #fff;
             text-decoration: none;
-            font-size: 1.2em;
+            margin: 0 1rem;
+            padding: 0.5rem 1rem;
         }
-
-        header nav ul li a:hover {
-            text-decoration: underline;
+        nav a:hover {
+            background: #555;
+            border-radius: 5px;
         }
-
-        /* Style pour les sections */
         section {
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 900px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 2rem;
         }
-
-        section h2 {
+        h2 {
             color: #333;
-            margin-bottom: 10px;
         }
-
-        section p, section ul {
-            font-size: 1.1em;
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1rem 0;
+            margin-top: 2rem;
         }
-
-        /* Style pour les boutons */
-        .buttons .button {
+        .btn {
             display: inline-block;
-            margin: 10px 5px;
-            padding: 10px 15px;
+            margin: 1rem 0.5rem;
+            padding: 0.5rem 1rem;
             background: #007BFF;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
-            font-size: 1em;
         }
-
-        .buttons .button:hover {
+        .btn:hover {
             background: #0056b3;
-        }
-
-        /* Style pour le footer */
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background: #333;
-            color: #fff;
-            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-
     <header>
         <h1>Bienvenue sur mon portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">À propos de moi</a></li>
-                <li><a href="#skills">Compétences</a></li>
-                <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#contact">Contactez-moi</a></li>
-            </ul>
-        </nav>
     </header>
+
+    <nav>
+        <a href="#about">À propos de moi</a>
+        <a href="#skills">Compétences</a>
+        <a href="#certifications">Certifications</a>
+        <a href="#projects">Projets</a>
+        <a href="#contact">Contactez-moi</a>
+    </nav>
 
     <section id="about">
         <h2>À propos de moi</h2>
         <p>Je m'appelle Maguette Diop, étudiante en première année de BTS SIO option SISR au lycée Notre-Dame de la Providence. Passionnée par l'informatique, je m'intéresse particulièrement aux infrastructures réseaux et systèmes.</p>
         <p>Je suis déterminée à développer mes compétences et à construire une carrière dans ce domaine en pleine croissance.</p>
-        <div class="buttons">
-            <a href="cv.pdf" download class="button">Télécharger mon CV</a>
-            <a href="cv.pdf" target="_blank" class="button">Consulter mon CV</a>
-        </div>
+        <a class="btn" href="CV_Maguette_Diop.pdf" download>Télécharger mon CV</a>
+        <a class="btn" href="CV_Maguette_Diop.pdf" target="_blank">Consulter mon CV</a>
     </section>
 
     <section id="skills">
@@ -150,16 +111,12 @@
 
     <section id="contact">
         <h2>Contactez-moi</h2>
-        <p>Vous pouvez me contacter via :</p>
-        <ul>
-            <li><strong>Email :</strong> <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></li>
-            <li><strong>Téléphone :</strong> 06 05 58 49 88</li>
-        </ul>
+        <p><strong>Email :</strong> <a href="mailto:md8118968@gmail.com">md8118968@gmail.com</a></p>
+        <p><strong>Téléphone :</strong> 06 05 58 49 88</p>
     </section>
 
     <footer>
         <p>© 2025 Maguette Diop. Tous droits réservés.</p>
     </footer>
-
 </body>
 </html>
